[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/experiments/light/Object.gd" type="Script" id=1]
[ext_resource path="res://src/experiments/light/light.png" type="Texture" id=2]

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( -24, 0, -24, 4, 20, 4, 20, 0 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 4 )

[node name="Object" type="RigidBody2D" groups=[
"Pickable",
]]
input_pickable = true
gravity_scale = 0.0
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.305882, 0.301961, 0.517647, 1 )
scale = Vector2( 4.8, 0.8 )
texture = ExtResource( 2 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2( 2, -2 )
occluder = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Top1" type="Node2D" parent="."]

[node name="Background" type="Sprite" parent="Top1"]
modulate = Color( 0.25098, 0.243137, 0.545098, 1 )
position = Vector2( 2.86102e-06, 0 )
scale = Vector2( 4.8, 0.8 )
texture = ExtResource( 2 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Top1"]
position = Vector2( 2, -2 )
scale = Vector2( 1, 1 )
occluder = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Top2" type="Node2D" parent="."]

[node name="Background" type="Sprite" parent="Top2"]
modulate = Color( 0.25098, 0.243137, 0.545098, 1 )
position = Vector2( 2.86102e-06, 0 )
scale = Vector2( 4.8, 0.8 )
texture = ExtResource( 2 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Top2"]
position = Vector2( 2, -2 )
scale = Vector2( 1, 1 )
occluder = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="FalseTopDown" type="Node2D" parent="."]
visible = false
z_index = 1
[connection signal="input_event" from="." to="." method="_on_Object_input_event"]
